# ralphing-la-vida-locum

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  PROMPT_build.md  RALPH_STRATEGY.md  README.md  SECURITY.md  deny.toml  ralph-analysis.md  ralph-implementation-sketches.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  ci.yml  release.yml
.ralph/: analytics.jsonl  task_tracker.json
.ralph/checkpoints/: 2dfc25ed-b5c6-4d57-b5cf-0ae02c37fdf6.json  8814bc64-1304-4432-85bf-40b260538eab.json  b61450ca-4372-471a-b4ac-83be3653c0cc.json  d73250f6-6a6f-49e1-8791-591381000fb9.json
benches/: benchmarks.rs
dev/bench/: data.js
docs/: COMPLETED_SPRINTS.md  LICENSING.md  REPO_STRUCTURE.md  developing-gates.md  quickstart-go.md  quickstart-python.md  quickstart-typescript.md
docs/archive/: IMPLEMENTATION_PLAN_v1_complete.md
docs/failures/: 2026-01-18-task-tracker-drift.md  enterprise-extraction-plan.md
examples/plugins/rubocop-gate/: Cargo.toml  README.md  plugin.toml
examples/plugins/rubocop-gate/src/: lib.rs
examples/polyglot-fullstack/: IMPLEMENTATION_PLAN.md  README.md
examples/polyglot-fullstack/backend/: pyproject.toml  requirements.txt
examples/polyglot-fullstack/backend/app/: __init__.py  main.py  models.py  store.py
examples/polyglot-fullstack/backend/tests/: __init__.py  conftest.py  test_health.py  test_tasks.py
examples/polyglot-fullstack/frontend/: package.json
examples/polyglot-fullstack/frontend/app/: globals.css  layout.tsx  page.tsx
examples/polyglot-fullstack/frontend/components/: TaskForm.tsx  TaskList.tsx
examples/polyglot-fullstack/frontend/lib/: api.ts
examples/polyglot-fullstack/shared/: openapi.yaml  types.ts
scripts/: bootstrap-ralph-cloud.sh
src/: analytics.rs  archive.rs  audit.rs  bootstrap.rs  campaign.rs  config.rs  context.rs  error.rs  hooks.rs  lib.rs  loop_manager.rs  main.rs  supervisor.rs  verify.rs
src/analytics/: cost.rs  events.rs  mod.rs  reporting.rs  session.rs  storage.rs  trends.rs
src/analytics/dashboard/: charts.rs  mod.rs  template.rs
src/bootstrap/: language.rs  language_detector.rs  mod.rs  templates.rs
src/changes/: mod.rs
src/checkpoint/: diff.rs  manager.rs  mod.rs  quality_metrics.rs  rollback.rs  thresholds.rs
src/config/: git.rs  resolution.rs  validation.rs
src/enterprise/: mod.rs  rbac.rs
src/llm/: claude.rs  mod.rs  ollama.rs  openai.rs  router.rs
src/loop/: manager.rs  mod.rs  operations.rs  preventive_action_handler.rs  progress.rs  retry.rs  state.rs  task_tracker.rs
src/loop/manager/: checkpoint.rs  iteration.rs  mod.rs  prompt_handling.rs
src/loop/task_tracker/: metrics.rs  mod.rs  parsing.rs  persistence.rs  state.rs
src/narsil/: ccg.rs  client.rs  constraint_loader.rs  constraint_verifier.rs  intelligence.rs  mod.rs
src/prompt/: antipatterns.rs  assembler.rs  builder.rs  claude_md_generator.rs  code_antipatterns.rs  context.rs  context_priority.rs  mod.rs  templates.rs
src/prompt/builder/: assembly.rs  mod.rs
src/prompt/builder/sections/: context.rs  intelligence.rs  intelligence_tests.rs  mod.rs  task.rs
src/quality/: enforcer.rs  gates.rs  mod.rs  parser.rs  plugin.rs  remediation.rs
src/quality/gates/: go.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/reporting/: certification.rs  export.rs  generator.rs  mod.rs
src/session/: mod.rs  persistence.rs  signals.rs
src/stagnation/: mod.rs  persistence.rs  types.rs
src/supervisor/: mod.rs  predictor.rs
src/templates/: CLAUDE.md  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_debug.md  PROMPT_plan.md  analysis_prompt.md  settings.json
src/templates/agents/: adversarial-reviewer.md  security-auditor.md  supervisor.md
src/templates/csharp/: CLAUDE.md  PROMPT_build.md
src/templates/docs/: adr-template.md  api.md  architecture.md  implementation-template.md
src/templates/git-hooks/: post-commit  pre-commit
src/templates/go/: CLAUDE.md  PROMPT_build.md  settings.json
src/templates/hooks/: end-of-turn.sh  post-edit-scan.sh  security-filter.sh  session-init.sh
src/templates/java/: CLAUDE.md  PROMPT_build.md
src/templates/php/: CLAUDE.md  PROMPT_build.md
src/templates/python/: CLAUDE.md  PROMPT_build.md  settings.json
src/templates/ruby/: CLAUDE.md  PROMPT_build.md
src/templates/skills/: docs-sync.md  project-analyst.md
src/templates/typescript/: CLAUDE.md  PROMPT_build.md  settings.json
src/testing/: assertions.rs  fixtures.rs  mocks.rs  mod.rs  traits.rs
tests/: cli_checkpoint_diff.rs  cli_integration.rs  polyglot_integration.rs  prompt_integration.rs
