[package]
name = "ralph"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Claude Code Automation Suite - Autonomous coding with bombproof reliability"
authors = ["Laurence Avent"]
license = "MIT"
repository = "https://github.com/postrv/ralphing-la-vida-locum"
keywords = ["claude", "automation", "ai", "coding", "mcp"]
categories = ["development-tools", "command-line-utilities"]

# Feature flags for optional integrations
# Ralph works standalone by default - all integrations gracefully degrade at runtime
[features]
default = []
# Note: narsil-mcp integration is detected at runtime, not compile-time
# This allows ralph to work seamlessly whether narsil-mcp is installed or not
# Future: Add compile-time feature flags for smaller binary when narsil not needed

[lib]
name = "ralph"
path = "src/lib.rs"

[[bin]]
name = "ralph"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system
walkdir = "2.5"
ignore = "0.4"
globset = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hashing
md5 = "0.8"
sha2 = "0.10"
hex = "0.4"

# UUID generation
uuid = { version = "1.20", features = ["v4"] }

# Terminal
colored = "3.1"
indicatif = "0.18"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Process management
which = "8.0"

# Async traits
async-trait = "0.1"

# Futures combinators for parallel execution
futures = "0.3"

# Regex
regex = "1.11"

# Plugin system
toml = "0.8"
libloading = "0.8"
dirs = "6.0"
fs2 = "0.4.3"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"
criterion = { version = "0.5", features = ["html_reports"] }

# Benchmark targets
[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
